src/styles/globals.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

ul[role="list"],
ol[role="list"] {
  list-style: none;
}

html {
  scroll-behavior: smooth;
  overflow-y: auto;
  -webkit-font-smoothing: antialiased !important;
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial;
  @apply tracking-tight transition-colors;
}

body {
  min-height: 100vh;
  @apply bg-white text-sm text-neutral-900;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

img,
picture {
  max-width: 100%;
  display: block;
}

input,
button,
textarea,
select {
  font: inherit;
}

@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

.project {
  @apply flex flex-col gap-4 text-neutral-900;
}

.project h1 {
  @apply font-semibold text-black;
}

.project strong {
  @apply font-normal;
}

.project a {
  @apply underline hover:text-green-500;
}

